--- a/main.html
+++ b/main.html
@@ -3,15 +3,12 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- the entire body must be written by student -->
-    <table style="width: 100%">
-    <caption>
-      Monthly savings
-    </caption>
+  <table style="width: 100%" id="grocery-table">
+    <caption>Monthly savings</caption>
     <tr>
       <th>Item</th>
       <th>Prices in Rs</th>
@@ -37,8 +34,11 @@
       <td class="price">50</td>
     </tr>
   </table>
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <!-- Button to trigger total calculation -->
+  <button id="getTotalPriceBtn">Get Total Price</button>
+
+  <script type="text/javascript" src="script.js"></script>
 
 </body>
 
