--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,8 +6,11 @@
 </head>
 
 <body>
-  <table style="width: 100%" id="grocery-table">
-    <caption>Monthly savings</caption>
+  <!-- the entire body content is written here -->
+  <table id="grocery-table" style="width: 100%">
+    <caption>
+      Monthly savings
+    </caption>
     <tr>
       <th>Item</th>
       <th>Prices in Rs</th>
@@ -35,11 +37,7 @@
     </tr>
   </table>
 
-  <!-- Button to trigger total calculation -->
-  <button id="getTotalPriceBtn">Get Total Price</button>
-
   <script type="text/javascript" src="script.js"></script>
-
 </body>
 
 </html>
