--- a/main.html
+++ b/main.html
@@ -2,42 +2,39 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <!-- the entire body content is written here -->
-  <table id="grocery-table" style="width: 100%">
-    <caption>
-      Monthly savings
-    </caption>
-    <tr>
-      <th>Item</th>
-      <th>Prices in Rs</th>
-    </tr>
-    <tr>
-      <td class="item">Tea</td>
-      <td class="price">50</td>
-    </tr>
-    <tr>
-      <td class="item">Coffee</td>
-      <td class="price">70</td>
-    </tr>
-    <tr>
-      <td class="item">Biscuits</td>
-      <td class="price">100</td>
-    </tr>
-    <tr>
-      <td class="item">Rice</td>
-      <td class="price">130</td>
-    </tr>
-    <tr>
-      <td class="item">Milk</td>
-      <td class="price">50</td>
-    </tr>
-  </table>
+    <table id="grocery-table" style="width: 100%">
+        <caption>Grocery List</caption>
+        <tr>
+            <th>Item</th>
+            <th>Price in Rs</th>
+        </tr>
+        <tr>
+            <td class="item">Tea</td>
+            <td class="price">50</td>
+        </tr>
+        <tr>
+            <td class="item">Coffee</td>
+            <td class="price">70</td>
+        </tr>
+        <tr>
+            <td class="item">Biscuits</td>
+            <td class="price">100</td>
+        </tr>
+        <tr>
+            <td class="item">Rice</td>
+            <td class="price">130</td>
+        </tr>
+        <tr>
+            <td class="item">Milk</td>
+            <td class="price">50</td>
+        </tr>
+    </table>
 
-  <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
